[project]
name = "neuroscope"
version = "0.1.0"
description = "A tool for visualizing and analyzing neural network models."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "onnx>=1.20.1",
    "onnxscript>=0.5.7",
    "pandas>=2.3.3",
    "pygments>=2.19.2",
    "streamlit>=1.52.2",
    "streamlit-agraph>=0.0.45",
    "torch>=2.9.1",
    "torchview>=0.2.7",
]
